added top 10 section

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ flask-bootstrap = "*"
 requests = "*"
 pandas = "*"
 gunicorn = "*"
+locale = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.8"
