Got veoci render plot working

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ requests = "*"
 pandas = "*"
 gunicorn = "*"
 matplotlib = "*"
+bokeh = "*"
+flask-cors = "*"
 
 [requires]
 python_version = "3.8"
